Update filter fragment
Ora è possibile filtrare il contenuto di questo fragment

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -32,33 +32,15 @@
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chip_group"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                app:selectionRequired="true"
                 style="@style/Widget.MaterialComponents.Chip.Filter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:singleSelection="true"
-                android:layout_gravity="center">
+                app:singleSelection="true" />
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/filterDuration"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Durata" />
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/filterVote"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Votazione" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/filterRelease"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Data uscita" />
-            </com.google.android.material.chip.ChipGroup>
         </HorizontalScrollView>
 
         <com.example.cinemates.util.RecyclerViewEmptySupport
