Adding design to Saved fragment

--- a/app/src/main/res/layout/fragment_listing.xml
+++ b/app/src/main/res/layout/fragment_listing.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <com.example.cinemates.util.RecyclerViewEmptySupport
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/search_nav_graph" />
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="3"
+        tools:listitem="@layout/list_item_media_poster" />
 
-
+    <include layout="@layout/layout_empty_recycler" />
 </RelativeLayout>
