Update Room Database

--- a/app/src/main/res/layout/list_item_media_long.xml
+++ b/app/src/main/res/layout/list_item_media_long.xml
@@ -99,7 +99,7 @@
                     android:id="@+id/iconAddWatched"
                     android:layout_width="42dp"
                     android:layout_height="42dp"
-                    android:src="@drawable/circle_icon"
+                    android:src="@drawable/ic_seen_icon"
                     app:tint="@color/item_state_color" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
