--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="alabaster">#FAFAFA</color>
     <color name="geyser">#CFD8DC</color>
     <color name="royal_blue_100">#3A55EA</color>
+    <color name="fern_frond_100">#487B1E</color>
     <!---->
 
 </resources>
