--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <item name="android:dialogTheme">@style/AppDialogTheme</item>
         <item name="android:textColorHint">@color/geyser</item>
         <item name="android:editTextColor">@color/white</item>
-
+        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
 
     </style>
 
@@ -81,6 +81,24 @@
         <item name="android:windowIsFloating">true</item>
         <item name="buttonTint">@color/vermilion_100</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
+    <!-- Define your custom bottom sheet dialog theme here extending from base -->
+    <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+    </style>
+
+    <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
+        <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
+        <item name="android:backgroundTint">@color/lynch_100</item>
+    </style>
+
+    <style name="CustomShapeAppearanceBottomSheetDialog" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
     </style>
 
     <!-- Define your custom alert theme here extending from base -->
