--- a/app/src/main/res/layout/fragment_detail_media_content.xml
+++ b/app/src/main/res/layout/fragment_detail_media_content.xml
@@ -44,7 +44,7 @@
                         app:imageUrlLong="@{movie.backdrop_path}"
                         tools:src="@tools:sample/backgrounds/scenic" />
 
-                    <TextView
+                  <!--  <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -59,7 +59,7 @@
                         android:visibility="invisible"
                         android:textColor="@color/alabaster"
                         android:textStyle="bold"
-                        app:hideNSeek="@{movie.adult}" />
+                        app:hideNSeek="@{movie.adult}" />-->
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.Toolbar
