--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -53,18 +53,9 @@
             app:spanCount="3"
             tools:listitem="@layout/list_item_media_poster" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <include
             android:id="@+id/shuffle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:contentDescription="Shuffle"
-            android:src="@drawable/ic_shuffle"
-            app:backgroundTint="@color/vermilion_100"
-            app:fabSize="normal" />
+            layout="@layout/layout_fab_shuffle" />
 
     </RelativeLayout>
 
