--- a/app/src/main/res/layout/fragment_listing.xml
+++ b/app/src/main/res/layout/fragment_listing.xml
@@ -6,11 +6,15 @@
     android:layout_height="match_parent">
 
     <com.example.cinemates.util.RecyclerViewEmptySupport
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
         tools:listitem="@layout/list_item_media_poster" />
 
-    <include layout="@layout/layout_empty_recycler" />
+    <include
+        android:id="@+id/empty_view"
+        layout="@layout/layout_empty_recycler" />
+
 </RelativeLayout>
