--- a/app/src/main/res/layout/list_item_section.xml
+++ b/app/src/main/res/layout/list_item_section.xml
@@ -26,6 +26,20 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textSectionContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/royal_blue_100"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:autoSizeMinTextSize="12sp"
+                android:autoSizeStepGranularity="2sp"
+                android:autoSizeTextType="uniform"
+                app:loadSectionDescription="@{section.sectionContentDescription}"
+                android:layout_marginEnd="12dp"
+                tools:text="Content" />
+
+            <TextView
                 android:id="@+id/textSectionTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
