--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -12,186 +12,202 @@
         <import type="android.view.View" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.fragment.MediaInfoFragment">
+            android:layout_height="match_parent">
 
-            <com.borjabravo.readmoretextview.ReadMoreTextView
-                android:id="@+id/readMoreTextV"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:textColor="@color/alabaster"
-                android:textSize="14sp"
-                app:colorClickableText="@color/vermilion_100"
-                app:loadText="@{movie.overview}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:trimLength="200"
-                app:trimMode="trimModeLength"
-                tools:text="@tools:sample/lorem/random" />
+                android:layout_height="match_parent"
+                tools:context=".ui.fragment.MediaInfoFragment">
 
-            <TextView
-                android:id="@+id/textTitleGenres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/readMoreTextV"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Genres"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
-            <HorizontalScrollView
-                android:id="@+id/chip_group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/textTitleGenres"
-                android:padding="10dp">
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chipGroupGenres"
-                    android:layout_width="wrap_content"
+                <com.borjabravo.readmoretextview.ReadMoreTextView
+                    android:id="@+id/readMoreTextV"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:genres="@{movie.genres}"
-                    app:singleLine="true"
-                    app:singleSelection="true" />
-            </HorizontalScrollView>
-
-            <!--     <TextView
-                     android:id="@+id/textTitleCrew"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="20dp"
-                     android:text="Crew"
-                     android:layout_marginStart="20dp"
-                     android:textColor="@color/alabaster"
-                     android:textSize="18sp"
-                     android:textStyle="bold"
-                     android:layout_below="@id/chip_group"/>
-
-                 <GridView
-                     android:id="@+id/listCrew"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_below="@id/textTitleCrew"/>-->
-
-            <TextView
-                android:id="@+id/textTitleInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/chip_group"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Info"
-                android:textColor="@color/alabaster"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <!--
-                        <TextView
-                            android:id="@+id/textReleaseInformationTitle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/textTitleInfo"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="16dp"
-                            android:text="Release information"
-                            android:textColor="@color/geyser"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/chipGroupReleaseDates"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/textReleaseInformationTitle" />-->
-
-            <include
-                android:id="@+id/movie_info"
-                layout="@layout/layout_movie_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/textTitleInfo"
-                app:movie="@{movie}" />
-
-            <include
-                android:id="@+id/collectionName"
-                layout="@layout/layout_item_collection"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_below="@id/movie_info"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                app:collection="@{movie.belongs_to_collection}" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/collectionName"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@color/alabaster"
+                    android:textSize="14sp"
+                    app:colorClickableText="@color/vermilion_100"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:loadText="@{movie.overview}"
+                    app:trimLength="200"
+                    app:trimMode="trimModeLength"
+                    tools:text="@tools:sample/lorem/random" />
 
                 <TextView
+                    android:id="@+id/textTitleGenres"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/readMoreTextV"
                     android:layout_marginStart="10dp"
-                    android:text="Similar"
+                    android:layout_marginTop="20dp"
+                    android:text="Genres"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <RelativeLayout
+                <HorizontalScrollView
+                    android:id="@+id/chip_group"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textTitleGenres"
+                    android:padding="10dp">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/chipGroupGenres"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:genres="@{movie.genres}"
+                        app:singleLine="true"
+                        app:singleSelection="true" />
+                </HorizontalScrollView>
+
+                <!--     <TextView
+                         android:id="@+id/textTitleCrew"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="20dp"
+                         android:text="Crew"
+                         android:layout_marginStart="20dp"
+                         android:textColor="@color/alabaster"
+                         android:textSize="18sp"
+                         android:textStyle="bold"
+                         android:layout_below="@id/chip_group"/>
+
+                     <GridView
+                         android:id="@+id/listCrew"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_below="@id/textTitleCrew"/>-->
+
+                <TextView
+                    android:id="@+id/textTitleInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/chip_group"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Info"
+                    android:textColor="@color/alabaster"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <!--
+                            <TextView
+                                android:id="@+id/textReleaseInformationTitle"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/textTitleInfo"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginTop="16dp"
+                                android:text="Release information"
+                                android:textColor="@color/geyser"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+
+                            <com.google.android.material.chip.ChipGroup
+                                android:id="@+id/chipGroupReleaseDates"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/textReleaseInformationTitle" />-->
+
+                <include
+                    android:id="@+id/movie_info"
+                    layout="@layout/layout_movie_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textTitleInfo"
+                    app:movie="@{movie}" />
+
+                <include
+                    android:id="@+id/collectionName"
+                    layout="@layout/layout_item_collection"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_below="@id/movie_info"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    app:collection="@{movie.belongs_to_collection}" />
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/collectionName"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:text="Similar"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <com.example.cinemates.util.RecyclerViewEmptySupport
+                            android:id="@+id/recommended_recyclerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/list_item_movie_small" />
+
+                        <include
+                            android:id="@+id/empty_view_recommended"
+                            layout="@layout/layout_empty_recycler" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/textSectionVideo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:text="Videos"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
 
                     <com.example.cinemates.util.RecyclerViewEmptySupport
-                        android:id="@+id/recommended_recyclerView"
+                        android:id="@+id/videos_recyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/list_item_movie_small" />
-
-                    <include
-                        android:id="@+id/empty_view_recommended"
-                        layout="@layout/layout_empty_recycler" />
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/textSectionVideo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:text="Videos"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                        tools:listitem="@layout/list_item_yt_video" />
 
 
-                <com.example.cinemates.util.RecyclerViewEmptySupport
-                    android:id="@+id/videos_recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/list_item_yt_video" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            </RelativeLayout>
 
+        </androidx.core.widget.NestedScrollView>
 
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="20dp"
+            android:backgroundTint="@color/vermilion_100"
+            android:src="@drawable/ic_baseline_add_24" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
