--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,46 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.ProfileFragment">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:text="Profile"
-        android:textColor="@color/alabaster"
-        android:textSize="32sp"
-        android:textStyle="bold" />
-
-    <com.example.cinemates.util.RecyclerViewEmptySupport
-        android:id="@+id/recyclerView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@drawable/round_corner_bg"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_below="@id/title"
-        android:orientation="vertical"
-        tools:itemCount="2"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_section" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/stats_section"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recyclerView"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:text="Your Stats"
-        android:textColor="@color/geyser"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:text="Profile"
+            android:textColor="@color/alabaster"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+        <com.example.cinemates.util.RecyclerViewEmptySupport
+            android:id="@+id/recyclerView"
+            android:paddingBottom="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/round_corner_bg"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="2"
+            tools:listitem="@layout/list_item_section" />
+
+        <TextView
+            android:id="@+id/stats_section"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recyclerView"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="12dp"
+            android:text="Your Stats"
+            android:textColor="@color/alabaster"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/counters"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/stats_section"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/round_corner_bg"
+            android:orientation="horizontal"
+            android:padding="12dp">
+
+            <include
+                android:id="@+id/stat_hours"
+                layout="@layout/layout_section_stats" />
+
+            <include
+                android:id="@+id/stat_watched_counter"
+                layout="@layout/layout_section_stats" />
+
+            <include
+                android:id="@+id/stat_to_see_counter"
+                layout="@layout/layout_section_stats" />
 
 
-</RelativeLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </RelativeLayout>
+
+</androidx.core.widget.NestedScrollView>
