FIxed some issues caused by re-packaging

--- a/app/src/main/res/layout/list_item_backdrop.xml
+++ b/app/src/main/res/layout/list_item_backdrop.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="image"
-            type="com.example.cinemates.model.data.Images" />
+            type="com.example.cinemates.model.data.Images.Image" />
     </data>
 
     <androidx.cardview.widget.CardView
