--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".view.ui.ActorDetailsActivity">
+        tools:context=".view.ui.ActorDetailsFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
