Adding Folder structure

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.DiscoverFragment">
+    tools:context=".view.ui.discover.DiscoverFragment">
 
     <TextView
         android:id="@+id/title"
