Fix some issues

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -40,7 +40,7 @@
         android:id="@+id/filterFragment"
         android:name="com.example.cinemates.view.ui.filterable.FilterableFragment"
         android:label="{genre}"
-        tools:layout="@layout/fragment_filter">
+        tools:layout="@layout/fragment_filterable">
         <argument
             android:name="genre"
             app:argType="com.example.cinemates.model.data.Genre" />
