--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,7 +69,7 @@
         app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/actorDetailsFragment"
-        android:name="com.example.cinemates.view.ui.ActorDetailsFragment"
+        android:name="com.example.cinemates.view.ui.details.actor.ActorDetailsFragment"
         android:label="ActorDetailsFragment"
         tools:layout="@layout/fragment_actor_details">
         <argument
