--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -41,7 +41,7 @@
                         android:layout_height="100dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="?attr/actionBarSize"
-                        app:path="@{actor.profile_path}" />
+                        app:path="@{actor.profilePath}" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/birthday"
